--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-    name: duious, Horrible Cop
-    markdown: kramdown
+name: duious, Horrible Cop
+markdown: kramdown
+permalink: /blog/:year/:month/:day/:title
